# for_dsa

./: Bottom_view_of_Binary_tree.cpp  CMakeLists.txt  Kth_smallest_element.cpp  Lec1_space_optimized_approach_for_fibonacci.cpp  Lec_11_Space_optimized_approach_for_Triangle.cpp  Lec_11_memoization_approach_for_triangle.cpp  Lec_11_tabulation_approach_for_Triangle.cpp  Lec_12_Space_Optimized_approach_for_minimum_or_maximum_falling_path_sum.cpp  Lec_12_memoization_approach_maximum_or_minimum_falling_path_sum.cpp  Lec_12_tabulation_approach_for_minimum_or_maximum_falling_path_sum.cpp  Lec_14_Memoization_approach_for_Subset_Sum_Equal_to_Target.cpp  Lec_14_Space_Optimized_approach_for_Subset_Sum_equal_To_Target.cpp  Lec_14_Tabulation_Approach_for_Subset_Sum_equal_To_Target.cpp  Lec_17_MEMOIZATION_APPROACH_FOR_COUNT_SUBSETS_WITH_SUM_L.cpp  Lec_17_SPACE_OPTIMIZED_APPROACH_FOR_COUNT_SUBSETS_WITH_SUM_K.cpp  Lec_17_TABULATION_APPROACH_FOR_COUNT_SUBSETS_WITH_SUM_K.cpp  Lec_18_Memoization_approach_for_Count_Partitions_with_Given_Difference.cpp  Lec_18_Space_Optimized_approach_for_Count_Partitions_with_Given_Difference.cpp  Lec_18_Tabulation_approach_for_Count_Partitions_with_given_Difference.cpp  Lec_19_Memoization_Approach_For_0_or_1_Knapsack.cpp  Lec_19_Space_Optimized_Approach_For_0_or_1_Knapsack.cpp  Lec_19_Tabulation_Approach_for_0_or_1_Knapsack_.cpp  Lec_1_recursive_approach_for_fibonacci.cpp  Lec_1_tabulation_approach_for_fibonacci.cpp  Lec_20_Memoization_Approach_for_Minimum_Coins.cpp  Lec_20_Space_Optimized_Approach_for_Minimum_Coins.cpp  Lec_26_Print_LCS.cpp  (+53 more)
(+56 files in other folders)
