cmake_minimum_required(VERSION 3.21)
project(Stack)

set(CMAKE_CXX_STANDARD 14)

add_executable(Stack Stack_using_arrays.cpp)

add_executable(Stack_using_arrays Stack_using_arrays.cpp)
add_executable(Stack_using_LinkedList Stack_using_LinkedList.cpp)
add_executable(Stack_in_STL Stack_in_STL.cpp)
add_executable(Delete_Middle_Element Practice/Delete_Middle_Element.cpp)
add_executable(Balanced_Bracket Practice/Balanced_Bracket.cpp)
add_executable(Insert_Element_at_Bottom Practice/Insert_Element_at_Bottom.cpp)
add_executable(Reverse_a_Stack_Using_Recursion Practice/Reverse_a_Stack_Using_Recursion.cpp)
add_executable(Sort_Stack_Using_Recursion Practice/Sort_Stack_Using_Recursion.cpp)
add_executable(Minimum_Bracket_Reversal Practice/Minimum_Bracket_Reversal.cpp)
add_executable(Celebrity_Problem Practice/Celebrity_Problem.cpp)
add_executable(Celebrity_Problem_Approach_2 Practice/Celebrity_Problem_Approach_2.cpp)
add_executable(Max_Rectangle Practice/Max_Rectangle.cpp)
add_executable(N-Stack_Array Practice/N-Stack_Array.cpp)